--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <link href="/index.css" rel="stylesheet" />
-    <title>Mad</title>
+    <title>Pentagon Bullet</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
